--- a/socket-server/nginx/default.conf
+++ b/socket-server/nginx/default.conf
@@ -14,16 +14,7 @@ server {
     ssl_certificate_key /etc/nginx/ssl/private-key.pem;
 
     location / {
-        proxy_pass http://backend:3000;  # "backend" é o nome do serviço no Docker Compose
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    location /socket.io/ {
-        proxy_pass http://backend:3000;  # A mesma coisa para o Socket.IO
+        proxy_pass http://backend:3000; 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
