--- a/socket-server/docker-compose.yml
+++ b/socket-server/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       - "80:80"   
       - "443:443"   
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf  # Configuração do NGINX
-      - ./ssl:/etc/nginx/ssl                               # Certificados SSL
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl:/etc/nginx/ssl
     depends_on:
       - backend  
     restart: unless-stopped
