--- a/socket-server/nginx/default.conf
+++ b/socket-server/nginx/default.conf
@@ -10,8 +10,8 @@ server {
     listen 443 ssl;
     server_name ec2-54-82-69-77.compute-1.amazonaws.com;
 
-    ssl_certificate /etc/nginx/ssl/certificate.pem;
-    ssl_certificate_key /etc/nginx/ssl/private-key.pem;
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
     location / {
         proxy_pass http://backend:3000; 
