--- a/socket-server/docker-compose.yml
+++ b/socket-server/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "443:443"   
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./ssl:/etc/nginx/ssl
+      - ./ssl:/etc/letsencrypt
     depends_on:
       - backend  
     restart: unless-stopped
