--- a/socket-server/nginx/default.conf
+++ b/socket-server/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ec2-54-82-69-77.compute-1.amazonaws.com;
+    server_name thiago.solutions www.thiago.solutions;  
 
     # Redireciona todas as requisições HTTP para HTTPS
     return 301 https://$host$request_uri;
@@ -8,13 +8,18 @@ server {
 
 server {
     listen 443 ssl;
-    server_name ec2-54-82-69-77.compute-1.amazonaws.com;
+    server_name thiago.solutions www.thiago.solutions;
 
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/thiago.solutions/fullchain.pem;  
+    ssl_certificate_key /etc/letsencrypt/live/thiago.solutions/privkey.pem;
+
+    location /.well-known/acme-challenge/ {  
+        root /tmp/acme_challenge;
+        allow all;
+    }
 
     location / {
-        proxy_pass http://backend:3000; 
+        proxy_pass http://backend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
