--- a/socket-server/docker-compose.yml
+++ b/socket-server/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./ssl:/etc/letsencrypt
+      - ./ssl/acme_challenge:/var/www/acme_challenge
     depends_on:
       - backend  
     restart: unless-stopped
