--- a/socket-server/nginx/default.conf
+++ b/socket-server/nginx/default.conf
@@ -1,29 +1,44 @@
 server {
     listen 80;
-    server_name thiago.solutions www.thiago.solutions;  
+    server_name thiago.solutions www.thiago.solutions;
 
     # Redireciona todas as requisições HTTP para HTTPS
     return 301 https://$host$request_uri;
+
+    # Permitir desafio ACME para renovação do Certbot
+    location /.well-known/acme-challenge/ {
+        root /var/www/acme_challenge;
+        default_type "text/plain";
+        allow all;
+    }
 }
 
 server {
     listen 443 ssl;
     server_name thiago.solutions www.thiago.solutions;
 
-    ssl_certificate /etc/letsencrypt/live/thiago.solutions/fullchain.pem;  
+    ssl_certificate /etc/letsencrypt/live/thiago.solutions/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/thiago.solutions/privkey.pem;
 
-    location /.well-known/acme-challenge/ {  
-        root /tmp/acme_challenge;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # Permitir desafio ACME para renovação do Certbot
+    location /.well-known/acme-challenge/ {
+        root /var/www/acme_challenge;
+        default_type "text/plain";
         allow all;
     }
 
+    # Proxy para o backend
     location / {
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
 }
+
