--- a/socket-client/package.json
+++ b/socket-client/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-nice-avatar": "^1.5.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
